--- a/Gato/.gitignore
+++ b/Gato/.gitignore
@@ -109,3 +109,8 @@ local.properties
 hs_err_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse,java,git
+
+#JavaFX 
+.classpath
+.project
+build.fxbuild
